--- a/cafe.css
+++ b/cafe.css
@@ -1,8 +1,27 @@
-@media only screen and (max-width: 768px) {
+@media (max-width: 768px) {
   header{
-    max-width: 1550px;
+    width: 500px;
   }
-  
+  .img2{
+    display: none;
+  }
+  .main-text p{
+    display: none;
+    margin-left: 300px;
+  }
+  .dd2{
+    transform: none;
+    margin-right: 100px;
+  }
+}
+@media (max-width: 320px) {
+  .dd2{
+     transform: none;
+  }
+}
+.dd2 img{
+  padding-left: 10px;
+  padding-right: 10px;
 }
 body {
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -81,7 +100,6 @@ body {
   text-align: center;
   border: 1px solid #70c05b;
   border-radius: 4px;
-  cursor: s; /* Меняем курсор при наведении */
   transition: 0.2s;
   margin-top: auto; /* Прижимаем кнопку к низу карточки */
 }
